<resources>
    <string name="app_name">沛誉光伏</string>

    <string name="home">首页</string>
    <string name="classify">分类</string>
    <string name="news">资讯</string>
    <string name="shopping_cart">购物车</string>
    <string name="mine">我的</string>

    <string name="developing">开发中</string>
    <string name="input_keyword">请输入关键字</string>
    <string name="time">2018-12-27 08:21</string>
    <string name="all">全部</string>
    <string name="wait_pay">待付款</string>
    <string name="wait_receiving">待收货</string>
    <string name="wait_send_goods">待发货</string>
    <string name="doned">已完成</string>
    <string name="untreated">未处理</string>
    <string name="being_processed">处理中</string>
    <string name="order_total_price"><![CDATA[总价 :<font color="#ff0000">￥%s</font>]]></string>
    <string name="total_cash"><![CDATA[总计 :<font color="#F5484A">￥%s</font>]]></string>
    <string name="power_kw"><![CDATA[<font color="#000000">%s</font>(kw)]]></string>
    <string name="power_total"><![CDATA[<font color="#000000">%s</font>(万度)]]></string>
    <string name="earnings_today"><![CDATA[<font color="#000000">%s</font>(元)]]></string>
    <string name="earnings_total"><![CDATA[<font color="#000000">%s</font>(万元)]]></string>
    <string name="add">添加</string>
    <string name="edit">编辑</string>
    <string name="done">完成</string>
    <string name="delete">删除</string>
    <string name="submit">提交</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="price_sub">单价：￥%1$s</string>
    <string name="price">￥%1$s</string>
    <string name="after_sale_order">售后工单</string>
    <string name="mine_order">我的订单</string>
    <string name="mine_power_station">我的电站</string>
    <string name="install_apply">安装申请</string>
    <string name="apply_install">申请安装</string>
    <string name="apply_after_sale_order">售后申请工单</string>
    <string name="data_entry">资料录入</string>
    <string name="solar_energy">太阳能</string>
    <string name="price_string">￥1800.00</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="input_phone_number">请输入手机号</string>
    <string name="input_real_name">请输入真实姓名 (注册后不可修改)</string>
    <string name="not_mobile_format">手机号码格式不正确</string>
    <string name="input_pwd">请输入密码</string>
    <string name="input_pwd_again">请再次输入密码</string>
    <string name="obtain_code">获取验证码</string>
    <string name="input_code">请输入验证码</string>
    <string name="code_error">验证码不正确</string>
    <string name="input_password_count">请输入6-18位密码</string>
    <string name="password_inconformity">两次密码输入不一致</string>
    <string name="send_code_succeed">验证码发送成功</string>
    <string name="agree_protocol"><![CDATA[点击注册即表示同意 <font color="#ff2456">《%s》</font>]]></string>
    <string name="news_details">资讯详情</string>
    <string name="collect">收藏</string>
    <string name="collected">已收藏</string>
    <string name="just_now">刚刚</string>
    <string name="minutes_ago">分钟前</string>
    <string name="hours_ago">小时前</string>
    <string name="yesterday">昨天</string>
    <string name="day_before_yesterday">前天</string>
    <string name="days_ago">天前</string>
    <string name="months_ago">个月前</string>
    <string name="years_ago">年前</string>
    <string name="format_all_time">yyyy-MM-dd HH:mm:ss</string>
    <string name="format_time_no_second">yyyy-MM-dd HH:mm</string>
    <string name="format_time_year_month_day">yyyy-MM-dd</string>
    <string name="reviews_num">%1$s条评论</string>
    <string name="input_comment">请输入评论内容</string>
    <string name="setting">设置</string>
    <string name="about_us">关于我们</string>
    <string name="comments"><![CDATA[商品评价(<font color="#F5484A">%s</font>)]]></string>
    <string name="simulation_income">模拟收入</string>
    <string name="name">小不点</string>
    <string name="order_details">订单详情</string>
    <string name="order_status"><![CDATA[订单状态：<font color="#FF0000">%s</font>]]></string>
    <string name="order_number"><![CDATA[订单号：<font color="#000000">%s</font>]]></string>
    <string name="order_time"><![CDATA[下单时间：<font color="#000000">%s</font>]]></string>
    <string name="pay_way"><![CDATA[支付方式：<font color="#000000">%s</font>]]></string>
    <string name="delivery_address"><![CDATA[收货地址：<font color="#000000">%s</font>]]></string>
    <string name="consignee"><![CDATA[收货人：<font color="#000000">%s</font>]]></string>
    <string name="mode_distribution"><![CDATA[配送方式：<font color="#000000">%s</font>]]></string>
    <string name="buy_again">再次购买</string>
    <string name="confirm_receipt">确定收货</string>
    <string name="application_drawback">退款申请</string>
    <string name="save">保存</string>
    <string name="personal_data">个人资料</string>
    <string name="register_protocol">注册协议</string>
    <string name="change_phone_code">验证码以短息方式发送至您的手机，请在60s内输入验证码！</string>
    <string name="input_explain">请输入说明文字</string>
    <string name="address">地址：%1$s</string>
    <string name="link_name">联系人：%1$s</string>
    <string name="phone">电\u3000话：%1$s</string>
    <string name="s_name">电站名称：%1$s</string>
    <string name="completion_acceptance">已竣工验收</string>
    <string name="being_installed">正在安装中</string>
    <string name="shipped">已发货</string>
    <string name="apply_being_processed">施工申报-处理中</string>
    <string name="graphic_details">图文详情</string>
    <string name="input_household_name">请输入电表户主姓名</string>
    <string name="input_contact_number">请输入联系电话</string>
    <string name="input_installation_address">请输入安装地址</string>
    <string name="input_roof_area">请输入屋顶面积 (㎡)</string>
    <string name="input_roof_gutter_area">请输入天沟面积 (㎡)</string>
    <string name="touch_to_focus">触摸屏幕对焦</string>
    <string name="choose_user_info">请选择用户基本信息</string>
    <string name="no_problem">暂无问题类型</string>
    <string name="input_covered_area">请输入建筑面积 (㎡)</string>
    <string name="choose_power_info">请选择电站信息</string>
    <string name="input_electricity_price">请输入电费价格</string>
    <string name="inventory">库存：%1$s</string>
    <string name="understock">库存不足</string>
    <string name="my_team">我的团队</string>
    <string name="my_balance">%1$s\n我的余额</string>
    <string name="my_team_sub">%1$s\n我的团队</string>
    <string name="my_performance">%1$s\n我的业绩</string>
    <string name="team_performance">%1$s\n团队业绩</string>
    <string name="my_power_station">%1$s\n我的电站</string>
    <string name="bask_in_a_single_comment">晒单评价</string>
    <string name="order_no">订单号：%1$s</string>
    <string name="goods_price_and_num">￥%1$s\u3000x%2$s</string>
    <string name="cancel_order">取消订单</string>
    <string name="go_pay">去付款</string>
    <string name="refund_ok">退款完成</string>
    <string name="refund">退款</string>
    <string name="refund_apply">退款中</string>
    <string name="order_cancel">订单已取消</string>
    <string name="delete_order">删除订单</string>
    <string name="submit_order">提交订单</string>
    <string name="confirm_order">确认订单</string>
    <string name="is_default">默认</string>
    <string name="set_default">设为默认</string>
    <string name="input_reception_name">请输入收货人姓名</string>
    <string name="input_details_address">请输入详细地址</string>
    <string name="choose_address">请选择收货地址</string>
    <string name="pay_type">请选择支付方式</string>
    <string name="pay_failure">支付失败</string>
    <string name="pay_succeed">支付成功</string>
    <string name="delete_this_address">确定要删除该地址？</string>
    <string name="province">广东</string>
    <string name="city">广州</string>
    <string name="county">天河</string>
    <string name="compile_address">编辑地址</string>
    <string name="choose_area">请选择项所在区域</string>
    <string name="confirm">确定</string>
    <string name="longitude_and_latitude">经度：%1$s  纬度：%2$s</string>
    <string name="power">功率%1$skw</string>
    <string name="no_power_station_information">暂无电站信息</string>
    <string name="become_distributor">成为经销商</string>
    <string name="online_service">在线客服</string>
    <string name="select_plant">选择电站</string>
    <string name="my_address">我的地址</string>
    <string name="yuan">%1$s元</string>
    <string name="balance">余额：%1$s</string>
    <string name="choose_bank_card">请选择银行卡</string>
    <string name="no_bound_card">您还没绑定银行卡，是否先绑定银行卡？</string>
    <string name="input_kaihu">请输入开户名</string>
    <string name="input_brank_num">请输入银行卡号</string>
    <string name="message_center">消息中心</string>
    <string name="announcement_message">公告信息</string>
    <string name="private_letter">私信</string>
    <string name="refuse">拒绝</string>
    <string name="agree">同意</string>
    <string name="search_news">搜索资讯</string>
    <string name="search_goods">搜索商品</string>
    <string name="help_info">帮助信息</string>
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="app_tip">提示</string>
    <string name="app_ok">确定</string>
    <string name="impower_failed">授权失败</string>
    <string name="impower_succeed">授权成功</string>
    <string name="impower_cancel">授权取消</string>

    <!--电压等级-->
    <string-array name="capacity">
        <item>220V</item>
        <item>380V</item>
    </string-array>

    <!--屋顶结构形式-->
    <string-array name="structure">
        <item>木质结构</item>
        <item>混凝土结构</item>
    </string-array>

    <!--瓦的材质-->
    <string-array name="material">
        <item>彩钢瓦</item>
        <item>玻璃瓦</item>
        <item>青瓦</item>
        <item>其他</item>
    </string-array>

    <!--房屋朝向-->
    <string-array name="direction">
        <item>朝东</item>
        <item>朝南</item>
        <item>朝西</item>
        <item>朝北</item>
    </string-array>

    <!--房屋朝向-->
    <string-array name="problem_types">
        <item>没有办法输电</item>
        <item>逆变器出现故障</item>
        <item>其他</item>
    </string-array>

    <string-array name="banks">
        <item>中国工商银行</item>
        <item>中国农业银行</item>
        <item>中国建设银行</item>
        <item>中国银行</item>
    </string-array>

</resources>
