<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/v_match_parent_no"
    android:layout_marginBottom="@dimen/d_10dp">

    <LinearLayout
        style="@style/ll_bottom_h"
        android:padding="@dimen/d_10dp">

        <TextView
            android:id="@+id/title_tv"
            style="@style/text_weight"
            android:background="@color/white"
            android:textColor="@color/color666" />

        <TextView
            android:id="@+id/state_tv"
            style="@style/text12colorRed"
            android:background="@color/white" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/border_bottom_divider"
        android:padding="@dimen/d_10dp">


        <TextView
            android:id="@+id/link_name_tv"
            style="@style/text"
            android:text="@string/link_name" />

        <TextView
            android:id="@+id/phone_tv"
            style="@style/text"
            android:layout_below="@+id/link_name_tv"
            android:layout_marginTop="@dimen/d_5dp"
            android:text="@string/phone" />

        <ImageView
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/in_right"
            style="@style/text"/>

    </RelativeLayout>


    <TextView
        android:id="@+id/address_tv"
        style="@style/text14color666"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:padding="@dimen/d_10dp"
        android:text="@string/address" />

</LinearLayout>
