<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/v_all_match_parent">

    <include layout="@layout/include_centertitletoolbar" />


    <LinearLayout
        style="@style/h_match_parent_no"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="50dp"
        android:gravity="center_vertical">

        <TextView
            style="@style/text"
            android:text="手机" />


        <com.xson.common.widget.DrawClickableEditText
            android:id="@+id/phone_et"
            style="@style/editText_bottom_style"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"
            android:hint="@string/input_phone_number"
            android:inputType="phone"
            android:maxLength="11"
            android:paddingRight="15dp" />

    </LinearLayout>

    <LinearLayout
        style="@style/h_match_parent_no"
        android:layout_marginLeft="15dp"
        android:gravity="center_vertical">


        <TextView
            style="@style/text"
            android:text="密码" />


        <LinearLayout
            style="@style/h_match_parent_no"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/border_bottom_divider"
            android:gravity="center_vertical">


            <com.xson.common.widget.DrawClickableEditText
                android:id="@+id/pwd_et"
                style="@style/editText_bottom_style"
                android:layout_marginRight="@dimen/d_15dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/input_password_count"
                android:inputType="textPassword"
                android:maxLength="18" />

            <ImageView
                android:id="@+id/showPwd_iv"
                style="@style/text"
                android:layout_marginRight="15dp"
                android:src="@mipmap/pwd_off" />


        </LinearLayout>

    </LinearLayout>


    <TextView
        android:id="@+id/forgotPwd_tv"
        style="@style/text12color666"
        android:layout_gravity="right|center_vertical"
        android:layout_marginRight="@dimen/d_10dp"
        android:layout_marginTop="@dimen/d_12dp"
        android:text="忘记密码？" />

    <Button
        android:id="@+id/login_bt"
        style="@style/button_style"
        android:layout_marginTop="@dimen/d_50dp"
        android:text="@string/login" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        style="@style/match_parent"
        android:layout_marginBottom="@dimen/d_10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_weight="1"
            android:background="@color/color999" />

        <TextView
            style="@style/text"
            android:layout_marginLeft="@dimen/d_10dp"
            android:layout_marginRight="@dimen/d_10dp"
            android:text="第三方登录"
            android:textColor="@color/color999" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_weight="1"
            android:background="@color/color999" />

    </LinearLayout>


    <ImageView
        android:id="@+id/weixin_iv"
        style="@style/text"
        android:padding="@dimen/d_10dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/d_10dp"
        android:src="@mipmap/dl_weixin"
        android:visibility="visible" />


</LinearLayout>
